Ensure explorer table column headings are not truncated

--- a/src/pages/explorer/explorerTable.scss
+++ b/src/pages/explorer/explorerTable.scss
@@ -31,6 +31,9 @@
 
 .explorerTableOverride {
   &.pf-c-table {
+    thead th + th + th {
+      min-width: 100px;
+    }
     thead th:first-child, tbody td:first-child {
       background-clip: padding-box;
       background-color: var(--pf-global--BackgroundColor--light-100);
